--- a/Diagnosis.App/Styles/TabControl.xaml
+++ b/Diagnosis.App/Styles/TabControl.xaml
@@ -1,23 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="tabHeaderWithExpander" TargetType="{x:Type TabItem}">
+    <Style x:Key="tabHeaderWithLine" TargetType="{x:Type TabItem}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabItem}">
                     <Border x:Name="Spacer"
                             Width="Auto"
                             Height="Auto"
-                            Padding="0 0 0 0"
-                            Margin="0 0 0 0"
-                            BorderBrush="Transparent"
-                            BorderThickness="0">
+                            Padding="0 3 0 3"
+                            Margin="0 8 5 8"
+                            BorderBrush="Gray"
+                            Background="Transparent"
+                            BorderThickness="4,0,0,0">
                         <Border
                                 x:Name="Border"
                                 Width="Auto"
                                 Height="Auto"
-                                BorderBrush="DarkGray"
-                                BorderThickness="0,0,0,0"
-                                CornerRadius="6,6,0,0"
                                 VerticalAlignment="Bottom">
                             <ContentPresenter
                                                x:Name="ContentSite"
@@ -29,6 +27,16 @@
                                                Height="Auto" />
                         </Border>
                     </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="BorderBrush" TargetName="Spacer" Value="Orange"/>
+                        </Trigger>
+                        <Trigger SourceName="Spacer" Property="IsMouseOver" Value="True">
+                            <Setter Property="BorderBrush" TargetName="Spacer" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                        </Trigger>
+
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
