--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -27,62 +27,53 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <ScrollViewer Grid.Row="1"
-                      VerticalScrollBarVisibility="Auto"
-                      Margin="0,5,0,0">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                </Grid.RowDefinitions>
-
-                <ListView x:Name="records"
-                          ItemsSource="{Binding HealthRecordsView}"
-                          IsSynchronizedWithCurrentItem="True"
-                          SelectedItem="{Binding SelectedHealthRecord}"
-                          Style="{StaticResource list}"
-                          HorizontalContentAlignment="Stretch"
-                          SelectionMode="Single">
-                    <ListView.GroupStyle>
-                        <GroupStyle>
-                            <GroupStyle.ContainerStyle>
-                                <Style TargetType="GroupItem">
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate>
-                                                <StackPanel>
-                                                    <TextBlock Text="{Binding Name, Mode=OneWay}" FontWeight="Bold" HorizontalAlignment="Right"></TextBlock>
-                                                    <Separator />
-                                                    <ItemsPresenter />
-                                                </StackPanel>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Style>
-                            </GroupStyle.ContainerStyle>
-                        </GroupStyle>
-                    </ListView.GroupStyle>
-
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <card:HealthRecord />
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="{x:Type ListViewItem}">
-                            <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
-                            <Setter Property="controls:Attached.InputBindings" Value="{StaticResource HRInputBindings}" />
+        
+        <Button Command="{Binding AddHealthRecordCommand}"
+                Height="25"
+                Margin="0,0,0,10">Добавить запись (Ctrl + N)</Button>
+        
+        <ListView x:Name="records"                  
+                  Grid.Row="1"
+                  ItemsSource="{Binding HealthRecordsView}"
+                  IsSynchronizedWithCurrentItem="True"
+                  SelectedItem="{Binding SelectedHealthRecord}"
+                  Style="{StaticResource list}"
+                  HorizontalContentAlignment="Stretch"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  SelectionMode="Single">
+            <ListView.GroupStyle>
+                <GroupStyle>
+                    <GroupStyle.ContainerStyle>
+                        <Style TargetType="GroupItem">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate>
+                                        <StackPanel>
+                                            <TextBlock Text="{Binding Name, Mode=OneWay}" FontWeight="Bold" HorizontalAlignment="Right"></TextBlock>
+                                            <Separator />
+                                            <ItemsPresenter />
+                                        </StackPanel>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
                         </Style>
-                    </ListView.ItemContainerStyle>
-                </ListView>
+                    </GroupStyle.ContainerStyle>
+                </GroupStyle>
+            </ListView.GroupStyle>
 
-                <Button Command="{Binding AddHealthRecordCommand}"
-                        Height="25"
-                        Margin="0,10,0,0"
-                        Grid.Row="1">Добавить запись (Ctrl + N)</Button>
-            </Grid>
-        </ScrollViewer>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <card:HealthRecord />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+                    <Setter Property="controls:Attached.InputBindings" Value="{StaticResource HRInputBindings}" />
+                </Style>
+            </ListView.ItemContainerStyle>
+        </ListView>
+       
     </Grid>
 </UserControl>
