--- a/Diagnosis.App/Controls/Card/HealthRecord.xaml
+++ b/Diagnosis.App/Controls/Card/HealthRecord.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <CheckBox IsChecked="{Binding IsChecked}" HorizontalAlignment="Center" VerticalAlignment="Stretch" VerticalContentAlignment="Top">
+        <CheckBox IsChecked="{Binding IsChecked}" Focusable="False" HorizontalAlignment="Center" VerticalAlignment="Stretch" VerticalContentAlignment="Top">
             <CheckBox.Style>
                 <Style TargetType="CheckBox">
                     <Setter Property="Visibility" Value="Visible" />
