--- a/Diagnosis.App/Controls/Card/AppointmentsList.xaml
+++ b/Diagnosis.App/Controls/Card/AppointmentsList.xaml
@@ -46,13 +46,12 @@
                                        HorizontalAlignment="Right"
                                        Visibility="{Binding IsDoctorFromCourse, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
                         </DockPanel>
-                        <controls:CommaList Grid.Row="1" DataContext="{Binding HealthRecords}" />
+                        <controls:CommaList Grid.Row="1" ItemsSource="{Binding HealthRecordsNames}" />
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}">
-                    <!--<Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />-->
                     <Setter Property="controls:Attached.InputBindings" Value="{StaticResource AppInputBindings}" />                    
                 </Style>
             </ListBox.ItemContainerStyle>
