--- a/Diagnosis.App/Controls/Editors/HealthRecordEditor.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditor.xaml
@@ -3,9 +3,9 @@
              x:Class="Diagnosis.App.Controls.Editors.HealthRecordEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
     <UserControl.Resources>
         <Style TargetType="DockPanel">
@@ -19,11 +19,9 @@
             <Setter Property="Height" Value="23" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
         </Style>
-        <Style TargetType="Label" BasedOn="{StaticResource label60}">
-        </Style>
+        <Style TargetType="Label" BasedOn="{StaticResource label90}" />
     </UserControl.Resources>
     <StackPanel>
-        <controls:InputTextBox DataContext="{Binding AutoComplete}" Visibility="Collapsed" />
         <controls:AutoComplete DataContext="{Binding AutoComplete2}" />
         <DockPanel Visibility="{Binding Symptom.Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
             <TextBlock DockPanel.Dock="Top">Слова:</TextBlock>
@@ -35,7 +33,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </DockPanel>
-        
+
         <DockPanel>
             <editors:CategoryChooser HorizontalAlignment="Left" />
         </DockPanel>
@@ -44,21 +42,21 @@
             <editors:ComboBoxDatePicker Year="{Binding FromYear, Mode=TwoWay}"
                                          Month="{Binding FromMonth, Mode=TwoWay}"
                                          Day="{Binding FromDay, Mode=TwoWay}" />
-            <Label Content="давность" Margin="10,0,0,0" />
+            <Label Content="давность" Margin="10,0,0,0" Width="60" />
             <editors:DateOffsetPicker DateOffset="{Binding DateOffset}" />
         </DockPanel>
         <DockPanel>
-            <Label Content="диагноз" />
+            <Label Content="число" />
+            <TextBox Text="{Binding NumValue}" />
+        </DockPanel>
+        <DockPanel>
+            <Label Content="диагноз МКБ" />
             <StackPanel>
                 <controls:SearchTree DataContext="{Binding DiagnosisSearch}" />
             </StackPanel>
         </DockPanel>
         <DockPanel>
-            <Label Content="число" />
-            <TextBox Text="{Binding NumValue}"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="коммент" />
+            <Label Content="комментарий" />
             <TextBox Text="{Binding Comment}" />
         </DockPanel>
     </StackPanel>
