--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -16,12 +16,17 @@
         </InputBindingCollection>
     </UserControl.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
 
-        <TabControl x:Name="tabControl" Padding="0" Grid.ColumnSpan="2" SelectionChanged="TabControl_SelectionChanged">
+
+        <TabControl x:Name="tabControl" Padding="0" Grid.ColumnSpan="2"  Grid.RowSpan="2">
             <TabControl.Resources>
                 <ResourceDictionary>
                     <ResourceDictionary.MergedDictionaries>
@@ -29,7 +34,7 @@
                     </ResourceDictionary.MergedDictionaries>
                 </ResourceDictionary>
             </TabControl.Resources>
-            <TabItem IsSelected="{Binding EditorActive, Mode=TwoWay}" >
+            <TabItem x:Name="editorTab" IsSelected="{Binding EditorActive, Mode=TwoWay}">
                 <TabItem.Header>
                     <card:PatientHeader />
                 </TabItem.Header>
@@ -43,7 +48,10 @@
                     </StackPanel>
                 </ScrollViewer>
             </TabItem>
-            <TabItem Header="Курсы" IsSelected="True" HorizontalContentAlignment="Stretch">
+            <TabItem x:Name="recordsTab" 
+                     Header="Записи" 
+                     IsSelected="{Binding EditorActive, Mode=TwoWay, Converter={StaticResource NegateBoolean}}" 
+                     Visibility="{Binding IsUnsaved, Converter={StaticResource NegBooleanToVisibilityConverter}}">
                 <DockPanel>
                     <Grid Margin="10,10,0,10">
                         <Grid.RowDefinitions>
@@ -59,13 +67,13 @@
         					Style="{StaticResource list}"
         					Grid.Row="2"
         					SelectionMode="Single">
-                            
+
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <card:Course Width="170" />
                                 </DataTemplate>
                             </ListView.ItemTemplate>
-                            
+
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="{x:Type ListViewItem}">
                                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -92,8 +100,12 @@
                 </DockPanel>
             </TabItem>
         </TabControl>
+        <StackPanel Grid.Column="1" Style="{StaticResource buttonsBar}" >
+            <StackPanel.Resources>
+                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource barButton}" />
+            </StackPanel.Resources>
 
-        <StackPanel Grid.Column="1">
+            <Button Command="{Binding FirstHrCommand}" Content="Добавить запись" HorizontalAlignment="Left" Visibility="{Binding CanAddFirstHr, Converter={StaticResource BooleanToVisibilityConverter}}" />
             <Button Command="{Binding Editable.CommitCommand}" Content="Сохранить" />
         </StackPanel>
     </Grid>
